# wearable-insurance-simulation

./: .gitignore  DB_risk_model.ipynb  DB_simulation.ipynb  DB_simulation_3way.ipynb  DB_simulation_data.ipynb  DB_sleep_pattern.ipynb  DB_sleep_time.ipynb  DB_step.ipynb  README.md  pyproject.toml  wearable_insurance_sweet_spot_study.ipynb
