[project]
name = "db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "matplotlib>=3.8.0",
    "pandas>=2.2.0",
    "pyarrow>=23.0.0",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.0"
]
